# Astraea

./: .gitignore  LICENSE  README.md  astraea.toml  build.zig
docs/benchmarks/: astraea_performance.md
docs/plans/: astraea_architecture_specification.md  plan.md  v2_roadmap.md
engine/: Cargo.toml  build.rs
engine/src/: attribution.rs  audit.rs  fs.rs  guardian.rs  ipc.rs  lib.rs  net.rs  proc_env.rs  v8.rs
engine/src/evaluator/: local.rs  mod.rs  remote.rs
interceptor/src/: c.h  common.zig  dlfcn.zig  fs.zig  main.zig  net.zig  proc.zig
tests/: audit.json  bench_performance.js  exploit_eval.js  exploit_fs_access.js  harness.js  run.sh  verify_astraea.py
tests/suite/: audit.test.js  config.test.js  fs.test.js  native.test.js  net.test.js  proc_env.test.js  seccomp.test.js
