[package]
name = "engine"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "AGPL-3.0-only"

[lib]
name = "engine"
crate-type = ["staticlib"]

[[bin]]
name = "astraea-gen"
path = "src/bin/astraea-gen.rs"

[dependencies]
libc = "0.2"
dashmap = "6.1"
once_cell = "1.20"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
globset = "0.4"
ipnet = "2.11"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
strip = true
opt-level = 0
lto = false
codegen-units = 256
